--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="description" content="Web site created using create-react-app"/>
         <link rel="apple-touch-icon" href="logo192.png"/>
         <link rel="manifest" href="manifest.json"/>
-        <title>React App</title>
+        <title>Mohsin Sackeer - Portfolio</title>
         <script defer="defer" src="static/js/main.d5ec3cdf.js"></script>
         <link href="static/css/main.3afa5f09.css" rel="stylesheet">
     </head>
